<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_beranda" />
        <item
            android:id="@+id/nav_diagnostic"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="@string/menu_diagnosa" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_riwayat" />
        <item
            android:id="@+id/nav_disease_list"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_daftar" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_pengaturan" />

    </group>
</menu>